fix projects video height on mobile

--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -61,7 +61,7 @@
 
 .project__video--enter video{
     width: 80vw;
-    height: 80vh;
+    height: 80svh;
 }
 
 .project__photo__box{
